# blender-ai-mcp

./: .env.example  AGENTS.md  CHANGELOG.md  pyproject.toml
_docs/_CHANGELOG/: 301-2026-05-04-task-159-session-capabilities-modularization.md  302-2026-05-04-task-159-addon-scene-utility-mixins.md  303-2026-05-04-task-159-addon-scene-world-render-mixin.md  304-2026-05-04-task-159-scene-context-state-read-slice.md  305-2026-05-04-task-159-addon-scene-lifecycle-context-mixin.md  306-2026-05-04-task-159-reference-current-view-compare-split.md  307-2026-05-04-task-159-scene-structural-read-slice.md  308-2026-05-04-task-159-scene-create-configure-slice.md  309-2026-05-04-task-159-addon-scene-structural-read-mixin.md  310-2026-05-04-task-159-addon-scene-inspection-mixin.md  311-2026-05-04-task-159-reference-image-lifecycle-split.md  312-2026-05-04-task-159-scene-facade-guards.md  313-2026-05-04-task-159-scene-inspect-slice.md  314-2026-05-04-task-159-reference-facade-guards.md  315-2026-05-04-task-159-final-closeout.md  README.md
_docs/_TASKS/: README.md  TASK-159-01-01_Reference_Public_Facade_Registration_And_Checkpoint_Orchestrator_Split.md  TASK-159-01-02_Reference_Truth_Planner_And_Service_Promotion_Split.md  TASK-159-01-03_Reference_Silhouette_View_Diagnostics_And_Understanding_Sidecars.md  TASK-159-01-04_Reference_Image_Lifecycle_And_Staged_Session_Integration.md  TASK-159-01-05_Reference_Current_View_Capture_And_Compare_Orchestration.md  TASK-159-01_Reference_Area_Modularization_And_Checkpoint_Assembly_Boundaries.md  TASK-159-02-01_Scene_Public_Facade_Registration_And_Version_Guards.md  TASK-159-02-02-01_Scene_Context_And_Selection_Read_Slices.md  TASK-159-02-02-02_Scene_Snapshot_Compare_And_Structural_Read_Slices.md  TASK-159-02-02-03_Scene_Inspect_Action_Matrix_And_Contract_Slices.md  TASK-159-02-02_Scene_Context_Inspect_Snapshot_And_Structural_Read_Slices.md  TASK-159-02-03_Scene_Spatial_Graph_And_View_Diagnostics_Slices.md  TASK-159-02-04_Scene_Measure_Assert_And_Guided_Side_Effects.md  TASK-159-02-05-01_Scene_Cleanup_Mode_And_Active_Object_Utility_Slices.md  TASK-159-02-05-02_Scene_Visibility_Isolation_And_Camera_Utility_Slices.md  TASK-159-02-05-03_Scene_Custom_Property_Utility_And_Dirtying_Glue.md  TASK-159-02-05_Scene_Object_Utility_Manage_And_Guided_Dirtying_Slices.md  TASK-159-02-06_Scene_Viewport_Background_Bridge_And_Output_Surface.md  TASK-159-02-07_Scene_Grouped_Create_And_Configure_Mega_Tool_Split.md  TASK-159-02_Scene_MCP_Area_Modularization_And_Surface_Slices.md  TASK-159-03-01-01_Addon_Scene_Lifecycle_And_Context_Read_Split.md  TASK-159-03-01-02_Addon_Scene_Snapshot_And_Structural_Read_Split.md  TASK-159-03-01-03_Addon_Scene_Inspection_Action_Matrix_And_Topology_Split.md  (+15 more)
(+52 files in other folders)
