[project]
name = "blender-ai-mcp"
version = "3.3.0"
description = "Production-shaped MCP server for Blender with goal-first routing, curated tools, deterministic verification, and vision-assisted 3D modeling workflows."
authors = [
    {name = "Patryk Ciechański",email = "patryk.ciechanski@patrykiti.pl"}
]
maintainers = [
    {name = "Patryk Ciechański",email = "patryk.ciechanski@patrykiti.pl"}
]
homepage = "https://github.com/PatrykIti/blender-ai-mcp"
repository = "https://github.com/PatrykIti/blender-ai-mcp"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.md", "NOTICE"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp[tasks] (>=3.2.4,<3.3.0)",
    "pydocket (>=0.19.0,<0.20.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "numpy (>=1.24.0) ; python_version >= \"3.11\"",
    "sentence-transformers (>=5.1.2,<6.0.0) ; python_version >= \"3.11\"",
    "lancedb (>=0.3.0,<1.0.0) ; python_version >= \"3.11\"",
    "pyarrow (>=14.0.0) ; python_version >= \"3.11\"",
    "pydantic-monty (==0.0.11)",
    "opentelemetry-sdk (>=1.40.0,<2.0.0)"
]


[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "blender_addon/__init__.py:version"
]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_release = true
build_command = "python scripts/build_addon.py"
assets = ["outputs/blender_ai_mcp.zip"]
commit_message = "chore(release): {version} [skip ci]"

[tool.poetry]
package-mode = false

[tool.poetry.group.vision.dependencies]
sentencepiece = ">=0.2.0,<0.3.0"
torch = ">=2.4,<3.0.0"
transformers = ">=4.56.0,<5.0.0"
torchvision = ">=0.22.0,<1.0.0"

[tool.poetry.group.mlx.dependencies]
mlx-vlm = ">=0.3.9,<0.4.0"
torchvision = ">=0.22.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["server", "blender_addon", "tests", "scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["server", "blender_addon", "tests", "scripts"]
ignore_missing_imports = true
implicit_optional = true
show_error_codes = true
pretty = false

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
vision = [
    "sentencepiece (>=0.2.0,<0.3.0)",
    "torch (>=2.4,<3.0.0)",
    "transformers (>=4.56.0,<5.0.0)"
]
